Web Inspector: Native Memory Instrumentation: MemoryInstrumentation doesn't detect reportMemoryUsage method defined in a base class. https://bugs.webkit.org/show_bug.cgi?id=105026

Reviewed by Yury Semikhatsky.

Old SFINAE test was replaced with new one based on this article:
http://stackoverflow.com/questions/1966362/sfinae-to-check-for-inherited-member-functions

Source/WTF:

* wtf/MemoryInstrumentation.h:
(MemoryInstrumentation):
(yes):
(IsInstrumented):
(no):
(WTF::MemoryInstrumentation::IsInstrumented::BaseMixin::reportMemoryUsage):
(WTF::MemoryInstrumentation::selectInstrumentationMethod):
(InstrumentationSelector):
(WTF):
(WTF::::reportObjectMemoryUsage):

Tools:

New test which covers this problem was added.

* TestWebKitAPI/Tests/WTF/MemoryInstrumentationTest.cpp:

Canonical link: https://commits.webkit.org/123424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137911 268f45cc-cd09-0410-ab3c-d52691b4dbfc